--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,6 +12,8 @@
         <div class="mb-3">
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
+
+        <a href="{{ path('app_home') }}">Accueil</a>
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
